--- a/05-buscador-peliculas/src/App.css
+++ b/05-buscador-peliculas/src/App.css
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 1000px;
 }
 
 main {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .form {
